<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rubach.ejercicio_contactos.Detalle_Activity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTituloDetalle"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"
        />
    <LinearLayout
    android:id="@+id/lblNombre_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    >
    <TextView
        android:id="@+id/lblNombre_campo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre_campo"
        android:layout_gravity="center_vertical"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre"
        android:layout_gravity="center_vertical"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"

        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/lblFecha_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/lblFecha_campo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFecha_campo"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFecha"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lblTelefono_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/lblTelefono_campo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTelefono_campo"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTelefono"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lblEmail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/lblEmail_campo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail_campo"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lblDescripcion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/lblDescripcion_campo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDescripcion_campo"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDescripcion"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:maxLines="4"
            android:lines="4"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lblBoton_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >
      <Button
          android:id="@+id/btnEditar"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:backgroundTint="@color/colorAccent"
          android:textColor="@android:color/white"
          android:text="@string/btnEditarDatos"
          android:layout_marginLeft="70dp"
          android:layout_marginRight="70dp"




          />

    </LinearLayout>
</LinearLayout>
